objects/SC_ConsultantCodes__c.object
<CustomObject>
    <description>This object will store the consultant code related to Contact</description>
    <fields>
        <fullName>RSC_AdviserEmail__c</fullName>
        <description>Financial Adviser&apos;s Email Address</description>
        <label>Adviser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserFirstName__c</fullName>
        <description>Used to store the Financial Advisor&apos;s First Name</description>
        <label>Adviser First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserLastName__c</fullName>
        <description>Financial Adviser&apos;s Last Name</description>
        <label>Adviser Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_AgreementNumber__c</fullName>
        <description>Used in the SRS integration to populate the Agreement Number for the Adviser&apos;s Brokerage</description>
        <label>Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_AgreementStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the SRS integration to check the Agreement Status for the Adviser&apos;s Brokerage ,if status is active the value will be True.</description>
        <label>Agreement Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Brokerage__c</fullName>
        <description>Used in the SRS integration to populate the Adviser&apos;s Brokerage name</description>
        <label>Brokerage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ContactId__c</fullName>
        <description>This field stores the id of contact record .</description>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consultant Codes</relationshipLabel>
        <relationshipName>ConsultantCodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SC_SRSBelongsToID__c</fullName>
        <description>Used in the SRS integration to populate the SRS ID for the Adviser&apos;s Brokerage</description>
        <label>SRS BelongsTo ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Consultant Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RSC_AdviserFirstName__c</columns>
        <columns>RSC_AdviserLastName__c</columns>
        <columns>RSC_AdviserEmail__c</columns>
        <columns>SC_AgreementNumber__c</columns>
        <columns>SC_AgreementStatus__c</columns>
        <columns>SC_Brokerage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consultant Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultant Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>